feat(front): Add support for Funkwhale UI library
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2617>

--- a/front/src/style/_main.scss
+++ b/front/src/style/_main.scss
@@ -64,3 +64,4 @@ $bottom-player-height: 4rem;
 
 @import "./themes/light/_main.scss";
 @import "./themes/dark/_main.scss";
+@import "@funkwhale/ui/style.css";
