fix(nginx): Make sure pages that require OG tags are served by the backend
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2623>

--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -75,7 +75,6 @@ server {
     listen [::]:80;
 
     server_name _;
-
 {% endif %}
 
     # General configs
@@ -131,6 +130,26 @@ server {
         proxy_pass   http://funkwhale-api;
     }
 {% endif %}
+
+    location ~ ^/library/(albums|tracks|artists|playlists)/ {
+        include /etc/nginx/funkwhale_proxy.conf;
+        proxy_pass   http://funkwhale-api;
+    }
+
+    location /channels/ {
+        include /etc/nginx/funkwhale_proxy.conf;
+        proxy_pass   http://funkwhale-api;
+    }
+
+    location ~ ^/@(vite-plugin-pwa|vite|id)/ {
+        include /etc/nginx/funkwhale_proxy.conf;
+        proxy_pass   http://funkwhale-front;
+    }
+
+    location /@ {
+        include /etc/nginx/funkwhale_proxy.conf;
+        proxy_pass   http://funkwhale-api;
+    }
 
     location / {
         expires 1d;
