fix(deploy): Serve staticfiles in bare metal deployments
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2665>

--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -261,5 +261,10 @@ server {
         alias /usr/share/nginx/html/staticfiles/;
     }
 {% endif %}
+{% if not config.reverse_proxy and not config.inside_docker %}
+    location /staticfiles/ {
+        alias ${STATIC_ROOT}/;
+    }
+{% endif %}
 {% endif %}
 }
