fix(nginx): Do not cache all requests for a day in the reverse proxy
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2673>

--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -159,7 +159,9 @@ server {
 {% endif %}
 
     location / {
+{% if not config.reverse_proxy %}
         expires 1d;
+{% endif %}
         include /etc/nginx/funkwhale_proxy.conf;
 {% if config.proxy_frontend and not config.reverse_proxy %}
         proxy_pass http://funkwhale-front;
